[gd_scene load_steps=3 format=3 uid="uid://d0xkfsnp4if7t"]

[ext_resource type="Script" uid="uid://e6efkqjxd7kb" path="res://app_scripts/network_manager.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://ge0ha75dw8o7" path="res://app_scripts/network_ui.gd" id="2_0xm2m"]

[node name="Main" type="Node2D"]

[node name="NetworkManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ig7tw")

[node name="NetworkUI" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0xm2m")

[node name="HostButton" type="Button" parent="NetworkUI"]
offset_left = 254.0
offset_top = 150.0
offset_right = 463.0
offset_bottom = 228.0
text = "Create Lobby (Host)"

[node name="JoinButton" type="Button" parent="NetworkUI"]
offset_left = 516.0
offset_top = 149.0
offset_right = 725.0
offset_bottom = 227.0
text = "Join Lobby (Client)"

[node name="LeaveButton" type="Button" parent="NetworkUI"]
offset_left = 762.0
offset_top = 149.0
offset_right = 971.0
offset_bottom = 227.0
text = "Leave (disconnect)
"

[node name="LobbyText" type="LineEdit" parent="NetworkUI"]
unique_name_in_owner = true
offset_left = 515.0
offset_top = 45.0
offset_right = 842.0
offset_bottom = 87.0
text = "multiplayer test-game"
alignment = 1

[node name="Label" type="Label" parent="NetworkUI"]
offset_left = 384.0
offset_top = 54.0
offset_right = 486.0
offset_bottom = 77.0
text = "Lobby Name:"

[node name="SendButton" type="Button" parent="NetworkUI"]
offset_left = 829.0
offset_top = 539.0
offset_right = 1022.0
offset_bottom = 588.0
text = "Send"

[node name="ChatBox" type="TextEdit" parent="NetworkUI"]
offset_left = 120.0
offset_top = 324.0
offset_right = 1014.0
offset_bottom = 512.0
editable = false
scroll_smooth = true

[node name="MessageText" type="LineEdit" parent="NetworkUI"]
offset_left = 128.0
offset_top = 539.0
offset_right = 787.0
offset_bottom = 583.0

[connection signal="pressed" from="NetworkUI/HostButton" to="NetworkUI" method="_on_host_button_pressed"]
[connection signal="pressed" from="NetworkUI/JoinButton" to="NetworkUI" method="_on_join_button_pressed"]
[connection signal="pressed" from="NetworkUI/LeaveButton" to="NetworkUI" method="_on_leave_button_pressed"]
[connection signal="pressed" from="NetworkUI/SendButton" to="NetworkUI" method="_on_send_button_pressed"]
